cabal-version:      2.4
name:               wh
version:            0.1.0.0

author:             Ingars Jekabsons
maintainer:         Ingars.Jekabsons@tietoevry.com

extra-source-files: CHANGELOG.md

common common-options
    build-depends:    base ^>=4.14.3.0
                    , mtl
                    , aeson
                    , deriving-aeson
                    , servant
                    , servant-server
                    , persistent
                    , persistent-sqlite
                    , esqueleto
                    , monad-logger
                    , wai
                    , wai-cors
                    , warp

executable wh
    import: common-options
    build-depends: wh
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
    default-language: Haskell2010

library
    import: common-options
    hs-source-dirs: src
    exposed-modules: DB, API
